modernize(java25): Math.clamp + virtual-thread YouTube loader
Java 25 modernization, batches 1 & 10 (safe subset):
- Math.clamp(value,min,max) replaces nested Math.min(Math.max(...)) at 4 sites
  where min<=max is guaranteed (Bot chat-speed, earnings reward, 2x housekeeping
  limit). Skipped SetStackHelperHeightEvent: there lo=tile.z*100 could exceed
  hi=MAX*100, and Math.clamp throws on min>max where min/max silently returned hi.
- YoutubeManager: the one-shot playlist HTTP loader pool ->
  Executors.newVirtualThreadPerTaskExecutor() (isolated blocking I/O, no Netty,
  no ordering). Skipped AuthHttpHandler's AUTH_EXECUTOR: its bound is deliberate
  backpressure and BCrypt is CPU-bound (virtual threads would remove the limit
  without benefit).

Verify on Temurin 25.0.3: mvn test -> 406 tests, 0 failures.